--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene background="color: #ffd700">
+    <a-scene debug background="darkgrey" fog="type: linear; color: #AAA">
 
         <a-assets>
           <!--On charge les textures du sol-->
@@ -11,30 +12,28 @@
           <!-- <img id="marbre_color" src="/assets/textures/sols/marbre/marbre_basecolor.jpg"></img>
           <img id="marbre_roughness" src="/assets/textures/sols/marbre/marbre_roughness.jpg"></img>
           <img id="marbre_height" src="/assets/textures/sols/marbre/marbre_height.png"></img> -->
+          <video id="youtube" autoplay loop="true" src="assets/videos/AFQC.mp4"></video>
           <!-- On charge le fauteuil -->
           <a-asset-item id="fauteuil" src="assets/obj/fauteuil/fauteuil.obj"></a-asset-item>
           <a-asset-item id="fauteuil-mtl" src="assets/obj/fauteuil/fauteuil.mtl"></a-asset-item>
           <!-- On charge le bureau -->
           <a-asset-item id="desk" src="assets/obj/desk/Desk.obj"></a-asset-item>
           
-          <a-asset-item id="commode" src="assets/obj/comode/maison.gltf"></a-asset-item>
         </a-assets>
 
         <!-- lumières Aziz !!! -->
         <a-entity light="type: point; color: #BBB; intensity: 1.3; castShadow:true; shadowCameraVisible: true;" position="-2 2 -2";></a-entity>
-
+        <a-text font="monoid" value="Hello, World!" position="2 2 -3" color="lime"></a-text>
         <!-- de quoi s'assoire -->
-        <a-entity obj-model="obj: #fauteuil; mtl: #fauteuil-mtl" position="-2 0 -3" rotation="0 90 0"></a-entity>
-
-        
-        <a-entity gltf-model="obj: #commode" position="-2 0 -3" rotation="0 90 0"></a-entity>
+        <!-- <a-entity obj-model="obj: #fauteuil; mtl: #fauteuil-mtl" position="-2 0 -3" rotation="0 90 0"></a-entity> -->
+        <a-video src="#youtube" width="3" height="1.5" position="-3 2 -3"></a-video>
 
         <!--Le bureau du chef-->
         <a-entity obj-model="obj: #desk" position="2 0 -3" rotation="0 90 0" scale="0.004 0.004 0.004"></a-entity>
 
         <!--Le sol-->
-        <!-- <a-plane position="15 0 15" rotation="-90 0 0" width="50" height="50"  src="#marbre" repeat="60 60" 
-        normal-texture-repeat="11" ></a-plane> -->
+        <a-plane position="15 0 15" rotation="-90 0 0" width="50" height="50"  src="#marbre" repeat="60 60" 
+        normal-texture-repeat="11" ></a-plane>
         <!-- <a-plane position="15 0 15" rotation="-90 0 0" width="50" height="50"  src="#marbre_height" repeat="60 60" 
         normal-texture-repeat="11" ></a-plane>
         <a-plane position="15 0 15" rotation="-90 0 0" width="50" height="50" color="#FFF" src="#marbre_color" repeat="60 60" 
