--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         </a-light>
       </a-entity>
 
-      <a-entity 
+      <!-- <a-entity 
         hand-controls="" magicleap-controls="hand: left; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: false" 
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
@@ -296,7 +296,7 @@
         hand-controls="" magicleap-controls="hand: right; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: false" 
         windows-motion-controls="hand: left; model: false" position="-0.10046 1.3 0">
-      </a-entity>
+      </a-entity> -->
 
     </a-scene>
 
