--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </a-entity>
 
       <!--LUMIERES DEVANT-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-7.45 6 -9.5" rotation="-90 0 0">
         </a-light>
@@ -186,9 +186,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="37.45 6 -9.5" rotation="-90 0 0">
         </a-light>
-      </a-entity>
+      </a-entity> -->
       <!--LUMIERES GAUCHE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-9.5 6 -7.53" rotation="-90 0 0">
         </a-light>
@@ -219,9 +219,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-9.5 6 37.53" rotation="-90 0 0">
         </a-light>
-      </a-entity>
+      </a-entity> -->
       <!--LUMIERES DROITE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="39.5 6 -7.48" rotation="-90 0 0">
         </a-light>
@@ -252,9 +252,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="39.5 6 37.48" rotation="-90 0 0">
         </a-light>
-      </a-entity>
+      </a-entity> -->
       <!--LUMIERES DERRIERE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-7.54 6 39.5" rotation="-90 0 0">
         </a-light>
@@ -285,7 +285,7 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="37.54 6 39.5" rotation="-90 0 0">
         </a-light>
-      </a-entity>
+      </a-entity> -->
 
       <!-- <a-entity 
         hand-controls="" magicleap-controls="hand: left; model: false" 
