--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </a-entity>
 
       <!--SPOTS MUR DEVANT-->
-      <a-entity>
+      <!-- <a-entity>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-7.45 4.1 -10" rotation="0 0 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -83,9 +83,9 @@
         position="32.45 4.1 -10" rotation="0 0 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="37.45 4.1 -10" rotation="0 0 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity>
+      </a-entity> -->
       <!--SPOTS MUR GAUCHE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-10 4.1 -7.53" rotation="0 90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -106,9 +106,9 @@
         position="-10 4.1 32.53" rotation="0 90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-10 4.1 37.53" rotation="0 90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity>
+      </a-entity> -->
       <!--SPOTS MUR DROIT-->
-      <a-entity>
+      <!-- <a-entity>
       <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
       position="40 4.1 -7.53" rotation="0 -90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
       <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -129,9 +129,9 @@
       position="40 4.1 32.53" rotation="0 -90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
       <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
       position="40 4.1 37.53" rotation="0 -90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity>
+      </a-entity> -->
       <!--SPOTS MUR DERRIERE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-7.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -152,7 +152,7 @@
         position="32.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="37.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity>
+      </a-entity> -->
 
       <!--LUMIERES DEVANT-->
       <!-- <a-entity>
