update path object

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img id="ciel" src="assets/images/clouds.jpg"></img>
         <img id="carrelage" src="assets/textures/abstract.jpg"></img>
         <!-- On charge le bureau -->
-        <a-asset-item id="desk" src="assets/obj/desk/Desk.obj"></a-asset-item>
+        <a-asset-item id="desk" src="assets/obj/Desk.obj"></a-asset-item>
         <!-- On charge le bureau -->
       </a-assets>
 
