--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </a-entity>
 
       <!--SPOTS MUR DEVANT-->
-      <!-- <a-entity>
+      <a-entity>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-7.45 4.1 -10" rotation="0 0 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -83,9 +83,9 @@
         position="32.45 4.1 -10" rotation="0 0 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="37.45 4.1 -10" rotation="0 0 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity> -->
+      </a-entity>
       <!--SPOTS MUR GAUCHE-->
-      <!-- <a-entity>
+      <a-entity>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-10 4.1 -7.53" rotation="0 90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -106,9 +106,9 @@
         position="-10 4.1 32.53" rotation="0 90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-10 4.1 37.53" rotation="0 90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity> -->
+      </a-entity>
       <!--SPOTS MUR DROIT-->
-      <!-- <a-entity>
+      <a-entity>
       <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
       position="40 4.1 -7.53" rotation="0 -90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
       <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -129,9 +129,9 @@
       position="40 4.1 32.53" rotation="0 -90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
       <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
       position="40 4.1 37.53" rotation="0 -90 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity> -->
+      </a-entity>
       <!--SPOTS MUR DERRIERE-->
-      <!-- <a-entity>
+      <a-entity>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="-7.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
@@ -152,10 +152,10 @@
         position="32.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
         <a-obj-model src="assets/obj/spot_mural.obj" mtl="assets/obj/spot_mural.mtl" 
         position="37.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
-      </a-entity> -->
+      </a-entity>
 
       <!--LUMIERES DEVANT-->
-      <!-- <a-entity>
+      <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-7.45 6 -9.5" rotation="-90 0 0">
         </a-light>
@@ -188,7 +188,7 @@
         </a-light>
       </a-entity> -->
       <!--LUMIERES GAUCHE-->
-      <!-- <a-entity>
+      <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-9.5 6 -7.53" rotation="-90 0 0">
         </a-light>
@@ -221,7 +221,7 @@
         </a-light>
       </a-entity> -->
       <!--LUMIERES DROITE-->
-      <!-- <a-entity>
+      <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="39.5 6 -7.48" rotation="-90 0 0">
         </a-light>
@@ -252,9 +252,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="39.5 6 37.48" rotation="-90 0 0">
         </a-light>
-      </a-entity> -->
+      </a-entity>
       <!--LUMIERES DERRIERE-->
-      <!-- <a-entity>
+      <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-7.54 6 39.5" rotation="-90 0 0">
         </a-light>
@@ -285,9 +285,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="37.54 6 39.5" rotation="-90 0 0">
         </a-light>
-      </a-entity> -->
+      </a-entity>
 
-      <!-- <a-entity 
+      <a-entity 
         hand-controls="" magicleap-controls="hand: left; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: false" 
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
@@ -296,7 +296,7 @@
         hand-controls="" magicleap-controls="hand: right; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: false" 
         windows-motion-controls="hand: left; model: false" position="-0.10046 1.3 0">
-      </a-entity> -->
+      </a-entity>
 
     </a-scene>
 
