--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene renderer="antialias: true;
-    colorManagement: true;
-    sortObjects: true;
-    physicallyCorrectLights: true;
-    maxCanvasWidth: 1920;
-    maxCanvasHeight: 1920;">
+    <a-scene>
 
       <a-assets>
         <!--On charge les textures du sol-->
@@ -160,7 +155,7 @@
       </a-entity>
 
       <!--LUMIERES DEVANT-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-7.45 6 -9.5" rotation="-90 0 0">
         </a-light>
@@ -191,9 +186,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="37.45 6 -9.5" rotation="-90 0 0">
         </a-light>
-      </a-entity> -->
+      </a-entity> --> -->
       <!--LUMIERES GAUCHE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-9.5 6 -7.53" rotation="-90 0 0">
         </a-light>
@@ -224,9 +219,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-9.5 6 37.53" rotation="-90 0 0">
         </a-light>
-      </a-entity> -->
+      </a-entity> --> -->
       <!--LUMIERES DROITE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="39.5 6 -7.48" rotation="-90 0 0">
         </a-light>
@@ -257,9 +252,9 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="39.5 6 37.48" rotation="-90 0 0">
         </a-light>
-      </a-entity>
+      </a-entity> -->
       <!--LUMIERES DERRIERE-->
-      <a-entity>
+      <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-7.54 6 39.5" rotation="-90 0 0">
         </a-light>
@@ -290,7 +285,7 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="37.54 6 39.5" rotation="-90 0 0">
         </a-light>
-      </a-entity>
+      </a-entity> -->
 
       <a-entity 
         hand-controls="" magicleap-controls="hand: left; model: false" 
