--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="37.45 6 -9.5" rotation="-90 0 0">
         </a-light>
-      </a-entity> --> -->
+      </a-entity> --> 
       <!--LUMIERES GAUCHE-->
       <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
@@ -219,7 +219,7 @@
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
                 position="-9.5 6 37.53" rotation="-90 0 0">
         </a-light>
-      </a-entity> --> -->
+      </a-entity> --> 
       <!--LUMIERES DROITE-->
       <!-- <a-entity>
         <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
