add loading screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene>
+    <a-scene loading-screen="dotsColor: red; backgroundColor: black">
 
       <a-assets>
         <!--On charge les textures du sol-->
