--- a/index.html
+++ b/index.html
@@ -154,139 +154,6 @@
         position="37.54 4.1 40" rotation="0 -180 0" scale="2 2 2" shadow="cast:true; receive:true"></a-obj-model>
       </a-entity>
 
-      <!--LUMIERES DEVANT-->
-      <!-- <a-entity>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-7.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-2.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="2.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="7.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="12.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="17.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="22.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="27.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="32.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="37.45 6 -9.5" rotation="-90 0 0">
-        </a-light>
-      </a-entity> --> 
-      <!--LUMIERES GAUCHE-->
-      <!-- <a-entity>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 -7.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 -2.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 2.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 7.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 12.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 17.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 22.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 27.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 32.53" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-9.5 6 37.53" rotation="-90 0 0">
-        </a-light>
-      </a-entity> --> 
-      <!--LUMIERES DROITE-->
-      <!-- <a-entity>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 -7.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 -2.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 2.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 7.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 12.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 17.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 22.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 27.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 32.48" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="39.5 6 37.48" rotation="-90 0 0">
-        </a-light>
-      </a-entity> -->
-      <!--LUMIERES DERRIERE-->
-      <!-- <a-entity>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-7.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="-2.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="2.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="7.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="12.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="17.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="22.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="27.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="32.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-        <a-light type="spot" color="white" intensity="0.3" angle="20" castShadow="true"
-                position="37.54 6 39.5" rotation="-90 0 0">
-        </a-light>
-      </a-entity> -->
-
       <a-entity 
         hand-controls="" magicleap-controls="hand: left; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: true" 
@@ -295,7 +162,7 @@
       <a-entity 
         hand-controls="" magicleap-controls="hand: right; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: true" 
-        windows-motion-controls="hand: left; model: false" position="-0.10046 1.3 0">
+        windows-motion-controls="hand: right; model: false" position="-0.10046 1.3 0">
       </a-entity>
 
     </a-scene>
