--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
       </a-entity>
 
+      <a-box color="yellow" position="0 1.5 -0.5" depth="0.1" height="0.1" width="0.15" draggable="true"></a-box>
+
     </a-scene>
 
   </body>
