--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <!-- lumières Aziz !!! -->
       <a-entity 
-        light="type: point; color: #BBB; intensity: 0.9; castShadow:true; shadowCameraVisible: true" 
+        light="type: point; color: #8ac6ff; intensity: 0.9; castShadow:true"
         position="0 6 0">
       </a-entity>                
       <!--Le sol-->
@@ -72,7 +72,7 @@
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
       </a-entity>
 
-      <a-box color="yellow" position="0 1.5 -0.5" depth="0.1" height="0.1" width="0.15" draggable="true"></a-box>
+      <a-box color="yellow" position="0 1.5 -0.5" depth="0.1" height="0.1" width="0.15" grabbable></a-box>
 
     </a-scene>
 
