--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/super-hands@^3.0.1/dist/super-hands.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -61,7 +62,7 @@
         scale="0.004 0.004 0.004" shadow="receive:true">
       </a-entity>
 
-      <a-entity 
+      <!-- <a-entity 
         hand-controls="" magicleap-controls="hand: right; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: true" 
         windows-motion-controls="hand: right; model: false" position="-0.10046 1.3 0">
@@ -70,7 +71,10 @@
         hand-controls="" magicleap-controls="hand: left; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: true" 
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
-      </a-entity>
+      </a-entity> -->
+      
+      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
+      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity>
 
       <a-box color="yellow" position="0 1.5 -0.5" depth="0.1" height="0.1" width="0.15" grabbable></a-box>
 
