--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene loading-screen="dotsColor: red; backgroundColor: black">
+    <a-scene loading-screen="dotsColor: red; backgroundColor: black"  antialias="true">
         <a-entity progressive-controls></a-entity>
       <a-assets>
         <!--On charge les textures du sol-->
