--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/super-hands@^3.0.1/dist/super-hands.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -76,7 +77,7 @@
       <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
       <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity>
       
-      <a-box color="yellow" position="0 1.5 -0.1" depth="0.1" height="0.1" width="0.1" grabbable></a-box>
+      <a-box color="yellow" position="0 1 -0.25" depth="0.1" height="0.1" width="0.1" grabbable></a-box>
 
     </a-scene>
 
