--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <a-scene loading-screen="dotsColor: red; backgroundColor: black"  antialias="true">
-        <a-entity progressive-controls></a-entity>
       <a-assets>
         <!--On charge les textures du sol-->
         <img id="marbre" src="assets/textures/sols/marbre/marbre_occlusion.jpg"></img>
@@ -19,6 +18,7 @@
         <!-- On charge le bureau -->
       </a-assets>
 
+      <a-entity progressive-controls></a-entity>
       <!--texte de demo-->
       <a-entity 
         text="value: Hello World !!!; width:5; color:red; align:center" 
@@ -74,8 +74,8 @@
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
       </a-entity> -->
       
-      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
-      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity>
+      <!-- <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
+      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity> -->
       
       <a-box color="yellow" position="0 1 -0.25" depth="0.1" height="0.1" width="0.1" grabbable></a-box>
 
