--- a/index.html
+++ b/index.html
@@ -1,65 +1,82 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-physics-system@4.0.1/dist/aframe-physics-system.js"></script>
     <script src="https://unpkg.com/super-hands@^3.0.1/dist/super-hands.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a-scene loading-screen="dotsColor: red; backgroundColor: black"  antialias="true">
+    <a-scene physics="debug: true">
+
       <a-assets>
-        <!--On charge les textures du sol-->
+        <!--textures du sol-->
         <img id="marbre" src="assets/textures/sols/marbre/marbre_occlusion.jpg"></img>
         <!--On charge le ciel-->
         <img id="ciel" src="assets/images/clouds.jpg"></img>
         <img id="carrelage" src="assets/textures/abstract.jpg"></img>
-        <!-- On charge le bureau -->
+        <!-- le bureau -->
         <a-asset-item id="desk" src="assets/obj/Desk.obj"></a-asset-item>
-        <!-- On charge le bureau -->
       </a-assets>
 
-      <a-entity progressive-controls></a-entity>
       <!--texte de demo-->
       <a-entity 
         text="value: Hello World !!!; width:5; color:red; align:center" 
-        position="-0.1 1 -0.5" 
-        animation="property: position; to: -0.1 2 -0.5; loop:true; dir:alternate; dur:2000; easing:easeInOutQuart ">
+        position="-0.1 1 -1" 
+        animation="property: position; to: -0.1 2 -1; loop:true; dir:alternate; dur:2000; easing:easeInOutQuart ">
       </a-entity>
       <a-sky color="white" src="#ciel" ></a-sky>
 
+
+      <a-mixin id="cube" geometry="primitive: box; width: 0.33; height: 0.33; depth: 0.33"
+                 hoverable grabbable stretchable draggable droppable
+                 event-set__hoveron="_event: hover-start; material.opacity: 0.7; transparent: true"
+                 event-set__hoveroff="_event: hover-end; material.opacity: 1; transparent: false"
+                 body="shape: box" shadow></a-mixin>
+        </a-mixin>
+
+        <a-entity class="cube" mixin="cube" position="0 1 -1" material="color: red"></a-entity>
+      <a-entity class="cube" mixin="cube" position="0 1 -0.5" material="color: red"></a-entity>
+      <a-entity class="cube" mixin="cube" position="-1 1 -1" material="color: blue"></a-entity>
+      <a-entity class="cube" mixin="cube" position="-1 1 -0.5" material="color: blue"></a-entity>
+      <a-entity class="cube" mixin="cube" position="1 1 -1" material="color: green"></a-entity>
+      <a-entity class="cube" mixin="cube" position="1 1 -0.5" material="color: green"></a-entity>
+
+      
+      <a-box body="type: static; shape: box" width=100 height=0.001 depth=100 visible="false"></a-box>
       <!-- lumières Aziz !!! -->
       <a-entity 
-        light="type: point; color: #8ac6ff; intensity: 0.9; castShadow:true"
+        light="type: point; color: white; intensity: 0.9; castShadow:true"
         position="0 6 0">
       </a-entity>                
       <!--Le sol-->
-      <a-plane 
+      <a-plane static-body
         position="15 0 15" rotation="-90 0 0" width="50" height="50"  src="#marbre" repeat="60 60" 
         normal-texture-repeat="11"  shadow="receive:true" roughness="0.8">
       </a-plane>
       <!--Mur de devant-->
-      <a-plane 
+      <a-plane static-body 
         position="15 2.5 -10" rotation="0 0 0" width="50" height="5"  src="#carrelage" repeat="10 1" 
         normal-texture-repeat="11"  shadow="receive:true"roughness="0.5">
       </a-plane>
       <!--Mur de derriere-->
-      <a-plane 
+      <a-plane  static-body
         position="15 2.5 40" rotation="0 -180 0" width="50" height="5"  src="#carrelage" repeat="10 1" 
         normal-texture-repeat="11"  shadow="receive:true">
       </a-plane>
       <!--Mur de gauche-->
-      <a-plane 
+      <a-plane  static-body
         position="-10 2.5 15" rotation="0 90 0" width="50" height="5"  src="#carrelage" repeat="10 1"
         normal-texture-repeat="11"  shadow="receive:true">
       </a-plane>
       <!--Mur de droite-->
-      <a-plane
+      <a-plane static-bodys
         position="40 2.5 15" rotation="0 -90 0" width="50" height="5"  src="#carrelage" repeat="10 1" 
         normal-texture-repeat="11"  shadow="receive:true">
       </a-plane>      
       <!--Le bureau du chef-->
       <a-entity 
-        obj-model="obj: #desk" position="0.5 0 -0.5" rotation="0 -180 0" 
+        obj-model="obj: #desk" position="0.5 0 -1" rotation="0 -180 0" 
         scale="0.004 0.004 0.004" shadow="receive:true">
       </a-entity>
 
@@ -77,7 +94,9 @@
       <!-- <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
       <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity> -->
       
-      <a-box color="yellow" position="0 1 -0.25" depth="0.1" height="0.1" width="0.1" grabbable></a-box>
+      <!-- <a-entity progressive-controls></a-entity>
+      <a-entity dynamic-body="shape:box; mass:5" position="0 1.2 0.2"></a-entity> -->
+      <a-box dynamic-body mass="2" color="yellow" position="0 1.2 -0.75" depth="0.1" height="0.1" width="0.1" grabbable></a-box>
 
     </a-scene>
 
