--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
       </a-entity> -->
       
-      <!-- <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
-      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity> -->
+      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
+      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity>
       
       <!-- <a-entity progressive-controls></a-entity>
       <a-entity dynamic-body="shape:box; mass:5" position="0 1.2 0.2"></a-entity> -->
