--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         scale="0.004 0.004 0.004" shadow="receive:true">
       </a-entity>
 
-      <!-- <a-entity 
+      <a-entity 
         hand-controls="" magicleap-controls="hand: right; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: true" 
         windows-motion-controls="hand: right; model: false" position="-0.10046 1.3 0">
@@ -91,10 +91,10 @@
         hand-controls="" magicleap-controls="hand: left; model: false" 
         vive-controls="model: false" oculus-touch-controls="model: true" 
         windows-motion-controls="hand: left; model: false" position="0.10046 1.3 0">
-      </a-entity> -->
+      </a-entity>
       
-      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
-      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity>
+      <!-- <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: left"></a-entity>
+      <a-entity sphere-collider="objects: a-box" super-hands hand-controls="hand: right"></a-entity> -->
       
       <!-- <a-entity progressive-controls></a-entity>
       <a-entity dynamic-body="shape:box; mass:5" position="0 1.2 0.2"></a-entity> -->
