--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a-entity id="player" collider-check>
         <a-entity raycaster="objects: .collidable" position="0 -0.9 0" rotation="90 0 0"></a-entity>
       </a-entity>
-      <a-entity class="collidable cube" mixin="cube" geometry="primitive: box" position="0 1 .1" material="color: red"></a-entity>
+      <a-entity class="collidable cube" mixin="cube" geometry="primitive: box" position="0 1 -1" material="color: red"></a-entity>
 
       <a-mixin id="cube" geometry="primitive: box; width: 0.33; height: 0.33; depth: 0.33"
                  hoverable grabbable stretchable draggable droppable
