--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       </a-entity>
 
 
-      <a-entity laser-controls="hand: left"  raycaster="lineColor: red; lineOpacity: 0.5"></a-entity>
-      <a-entity laser-controls="hand: right" raycaster="lineColor: red; lineOpacity: 0.5"></a-entity>
+      <a-entity laser-controls="hand: left"  raycaster="lineColor: red; lineOpacity: 0.5" defaultModelColor="#ffd700"></a-entity>
+      <a-entity laser-controls="hand: right" raycaster="lineColor: red; lineOpacity: 0.5" defaultModelColor="#ffd700"></a-entity>
 
 
       <!-- <a-entity 
